white spaces to special characters issue fix in user to bot message

--- a/src/components/chatwindow/sass/footer.scss
+++ b/src/components/chatwindow/sass/footer.scss
@@ -18,7 +18,6 @@
         max-height: 70px;
         overflow-x: hidden;
         overflow-y: auto;
-		white-space: pre;
     }
     .chatInputBoxPlaceholder {
         position: absolute;
